@@ -36,7 +36,7 @@ BOOST_AUTO_TEST_CASE (ffmpeg_pts_offset_test)
 		/* Sound == video so no offset required */
 		content->_first_video = ContentTime ();
 		content->_audio_stream->first_audio = ContentTime ();
-		FFmpegDecoder decoder (film, content, true, true);
+		FFmpegDecoder decoder (content, film->log(), true, true, true);
 		BOOST_CHECK_EQUAL (decoder._pts_offset, ContentTime ());
 	}
 
@@ -44,7 +44,7 @@ BOOST_AUTO_TEST_CASE (ffmpeg_pts_offset_test)
 		/* Common offset should be removed */
 		content->_first_video = ContentTime::from_seconds (600);
 		content->_audio_stream->first_audio = ContentTime::from_seconds (600);
-		FFmpegDecoder decoder (film, content, true, true);
+		FFmpegDecoder decoder (content, film->log(), true, true, true);
 		BOOST_CHECK_EQUAL (decoder._pts_offset, ContentTime::from_seconds (-600));
 	}
 
@@ -52,7 +52,7 @@ BOOST_AUTO_TEST_CASE (ffmpeg_pts_offset_test)
 		/* Video is on a frame boundary */
 		content->_first_video = ContentTime::from_frames (1, 24);
 		content->_audio_stream->first_audio = ContentTime ();
-		FFmpegDecoder decoder (film, content, true, true);
+		FFmpegDecoder decoder (content, film->log(),true, true, true);
 		BOOST_CHECK_EQUAL (decoder._pts_offset, ContentTime ());
 	}
 
@@ -61,7 +61,7 @@ BOOST_AUTO_TEST_CASE (ffmpeg_pts_offset_test)
 		double const frame = 1.0 / 24.0;
 		content->_first_video = ContentTime::from_seconds (frame + 0.0215);
 		content->_audio_stream->first_audio = ContentTime ();
-		FFmpegDecoder decoder (film, content, true, true);
+		FFmpegDecoder decoder (content, film->log(), true, true, true);
 		BOOST_CHECK_CLOSE (decoder._pts_offset.seconds(), (frame - 0.0215), 0.00001);
 	}
 
@@ -70,7 +70,7 @@ BOOST_AUTO_TEST_CASE (ffmpeg_pts_offset_test)
 		double const frame = 1.0 / 24.0;
 		content->_first_video = ContentTime::from_seconds (frame + 0.0215 + 4.1);
 		content->_audio_stream->first_audio = ContentTime::from_seconds (4.1);
-		FFmpegDecoder decoder (film, content, true, true);
+		FFmpegDecoder decoder (content, film->log(), true, true, true);
 		BOOST_CHECK_EQUAL (decoder._pts_offset.seconds(), (frame - 0.0215) - 4.1);
 	}
 }
