@@ -1,3 +1,7 @@
+2014-03-07  Carl Hetherington  <cth@carlh.net>
+
+	* Add subtitle view.
+
 2014-03-06  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.65.0 released.
